k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-management-api
  namespace: employee-management-api
  labels:
    app: employee-management-api
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: employee-management-api
